Replace shadow plugin with spring boot
Reducing build times from 5 minutes to 5 seconds